[package]
name = "ddos-russia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
rand = "0.8.5"
reqwest = "0.11.9"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }